# django_subserver

./: .gitignore  README.md  base.py  build_and_push  requirements.txt  router.py  setup.cfg  tox.ini
src/django_subserver/: __init__.py  base.py  method_view.py  router.py  urls.py
src/django_subserver.egg-info/: PKG-INFO  SOURCES.txt
tests/: hello_world_sub_view.py  settings.py  test.py
tests/view_modules/: hello_world.py
