[metadata]
name = django_subserver
version = file: VERSION
author = Alex Fischer
author_email = alex@quadrant.net
; description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
; url = https://github.com/pypa/sampleproject
; project_urls =
;     Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    Django>=3.0,<6

[options.packages.find]
where = src